--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-
+import { Button } from '@/components/ui/button';
+import '@/styles/globals.css';
 ---
 
 <html lang="en">
@@ -12,5 +13,7 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
+
+		<Button>Hello Shadcn/UI</Button>
 	</body>
 </html>
