--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,11 @@
 ---
-import { Button } from '@/components/ui/button';
-import '@/styles/globals.css';
+import { Button } from "@/components/ui/button";
+import BaseLayout from "@/layouts/BaseLayout.astro";
+import "@/styles/globals.css";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
+<BaseLayout title="Astro"
+  ><h1>Astro</h1>
 
-		<Button>Hello Shadcn/UI</Button>
-	</body>
-</html>
+  <Button>Hello Shadcn/UI</Button>
+</BaseLayout>
