--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Navbar from "@/components/navbar.astro";
 const { title } = Astro.props;
 ---
 
@@ -11,6 +12,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <Navbar />
     <slot />
   </body>
 </html>
