feat: update dark toggle, update content

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,14 +1,12 @@
 ---
-import { Button } from "@/components/ui/button";
+import { House } from "lucide-react";
+import { Link } from "@/components/ui/link";
+import { ModeToggle } from "./ModeToggle";
 
 const links = [
   {
     name: "About",
     href: "/about",
-  },
-  {
-    name: "Now",
-    href: "/now",
   },
   {
     name: "Blog",
@@ -21,15 +19,17 @@ const links = [
 ];
 ---
 
-<nav class="bg-gray-800 p-4 text-white">
+<nav class="p-4 bg-blue-100 dark:bg-gray-800 text-gray-800 dark:text-white">
   <div class="container mx-auto flex justify-between items-center">
     <div class="lg:flex lg:items-center lg:w-auto w-full">
-      <Button variant="link" className="text-white">
-        <a href="/">Home</a>
-      </Button>
+      <Link href="/" variant="link">
+        <House />
+      </Link>
     </div>
+
+    <!-- mobile menu button -->
     <div class="lg:hidden">
-      <button id="mobile-menu-button" class="text-white">
+      <button id="mobile-menu-button">
         <svg
           class="w-6 h-6"
           fill="none"
@@ -45,48 +45,46 @@ const links = [
         </svg>
       </button>
     </div>
+
     <div class="hidden lg:flex lg:items-center lg:w-auto w-full">
-      <ul class="text-white lg:flex lg:space-x-4">
+      <ul class="lg:flex lg:space-x-4">
         {
           links.map(({ name, href }) => (
             <li>
-              <Button variant="link" className="text-white">
-                <a href={href} class="block py-2 px-4">
-                  {name}
-                </a>
-              </Button>
+              <Link href={href} variant="link">
+                {name}
+              </Link>
             </li>
           ))
         }
       </ul>
     </div>
+
     <div class="hidden lg:flex lg:items-center lg:w-auto w-full">
-      <!-- todo: dark mode toggle -->
-      <Button variant="link" className="text-white hidden">dark mode</Button>
+      <ModeToggle client:load />
     </div>
   </div>
+
   <div id="mobile-menu" class="lg:hidden hidden">
-    <ul class="text-white space-y-2">
+    <ul class="text-gray-800 dark:text-white space-y-2">
       {
         links.map(({ name, href }) => (
           <li class="text-center">
-            <Button variant="link" className="text-white">
-              <a href={href} class="block py-2 px-4">
-                {name}
-              </a>
-            </Button>
+            <Link href={href} variant="link" className="text-white">
+              {name}
+            </Link>
           </li>
         ))
       }
     </ul>
   </div>
-</nav>
 
-<script>
-  document.getElementById("mobile-menu-button")?.addEventListener("click", () => {
-    const menu = document.getElementById("mobile-menu");
-    if (menu) {
-      menu.classList.toggle("hidden");
-    }
-  });
-</script>
+  <script>
+    document.getElementById("mobile-menu-button")?.addEventListener("click", () => {
+      const menu = document.getElementById("mobile-menu");
+      if (menu) {
+        menu.classList.toggle("hidden");
+      }
+    });
+  </script>
+</nav>
