--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,30 @@
 ---
 import { Button } from "@/components/ui/button";
 import BaseLayout from "@/layouts/BaseLayout.astro";
-import "@/styles/globals.css";
 ---
 
-<BaseLayout title="Astro"
-  ><h1>Astro</h1>
+<script is:inline>
+	const getThemePreference = () => {
+		if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
+			return localStorage.getItem('theme');
+		}
+		return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+	};
+	const isDark = getThemePreference() === 'dark';
+	document.documentElement.classList[isDark ? 'add' : 'remove']('dark');
+ 
+	if (typeof localStorage !== 'undefined') {
+		const observer = new MutationObserver(() => {
+			const isDark = document.documentElement.classList.contains('dark');
+			localStorage.setItem('theme', isDark ? 'dark' : 'light');
+		});
+		observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
+	}
+</script>
 
-  <Button>Hello Shadcn/UI</Button>
+<BaseLayout title="Astro">
+  <div class="mx-auto max-w-screen-md mt-8 px-4">
+    <h1 class="text-4xl font-bold my-4">Astro</h1>
+    <Button>Hello Shadcn/UI</Button>
+  </div>
 </BaseLayout>
