feat: add blog content

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,12 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
+import BlogList from "@/components/blogList.astro";
 ---
 
 <BaseLayout title="Blog">
   <div class="mx-auto max-w-screen-md mt-8 px-4">
     <h1 class="text-4xl font-bold my-4">Blog</h1>
+
+    <BlogList />
   </div>
 </BaseLayout>
