--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,30 +1,44 @@
 ---
-import { Button } from "@/components/ui/button";
 import BaseLayout from "@/layouts/BaseLayout.astro";
+import BlogList from "@/components/blogList.astro";
+import { Button } from "@/components/ui/button";
 ---
 
 <script is:inline>
-	const getThemePreference = () => {
-		if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
-			return localStorage.getItem('theme');
-		}
-		return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
-	};
-	const isDark = getThemePreference() === 'dark';
-	document.documentElement.classList[isDark ? 'add' : 'remove']('dark');
- 
-	if (typeof localStorage !== 'undefined') {
-		const observer = new MutationObserver(() => {
-			const isDark = document.documentElement.classList.contains('dark');
-			localStorage.setItem('theme', isDark ? 'dark' : 'light');
-		});
-		observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
-	}
+  // dark and light mode switch
+  const getThemePreference = () => {
+    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
+      return localStorage.getItem("theme");
+    }
+    return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
+  };
+  const isDark = getThemePreference() === "dark";
+  document.documentElement.classList[isDark ? "add" : "remove"]("dark");
+
+  if (typeof localStorage !== "undefined") {
+    const observer = new MutationObserver(() => {
+      const isDark = document.documentElement.classList.contains("dark");
+      localStorage.setItem("theme", isDark ? "dark" : "light");
+    });
+    observer.observe(document.documentElement, { attributes: true, attributeFilter: ["class"] });
+  }
 </script>
 
 <BaseLayout title="Astro">
   <div class="mx-auto max-w-screen-md mt-8 px-4">
     <h1 class="text-4xl font-bold my-4">Astro</h1>
-    <Button>Hello Shadcn/UI</Button>
+    <Button id="shadcn-ui-button">Hello Shadcn/UI</Button>
+
+    <h2 class="text-2xl font-bold my-4">Blog</h2>
+    <BlogList />
   </div>
 </BaseLayout>
+
+<script>
+  const handleClick = () => {
+    console.log("Hello Shadcn/UI");
+    alert("Hello Shadcn/UI");
+  };
+
+  document.getElementById("shadcn-ui-button")?.addEventListener("click", handleClick);
+</script>
