--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,11 +1,15 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import BlogList from "@/components/blogList.astro";
+import { getLangFromUrl, useTranslations } from "@/i18n/utils";
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <BaseLayout title="Blog">
   <div class="mx-auto max-w-screen-md mt-8 px-4">
-    <h1 class="text-4xl font-bold my-4">Blog</h1>
+    <h1 class="text-4xl font-bold my-4">{t("blog")}</h1>
 
     <BlogList />
   </div>
