--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,11 +1,15 @@
 ---
 import { Link } from "@/components/ui/link";
 import BaseLayout from "@/layouts/BaseLayout.astro";
+import { getLangFromUrl, useTranslations } from "@/i18n/utils";
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <BaseLayout title="Contact">
   <div class="mx-auto max-w-screen-md mt-8 px-4">
-    <h1 class="text-4xl font-bold my-4">Contact</h1>
+    <h1 class="text-4xl font-bold my-4">{t("contact")}</h1>
     <ul class="list-disc list-inside">
       <li>
         <Link variant="link" href="https://github.com" target="_blank">GitHub</Link>
