--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,20 +1,26 @@
 ---
 import { House } from "lucide-react";
 import { Link } from "@/components/ui/link";
-import { ModeToggle } from "./ModeToggle";
+import { ModeToggle } from "@/components/ModeToggle";
+import { getLangFromUrl, useTranslatedPath, useTranslations } from "@/i18n/utils";
+import { LanguagePicker } from "@/components/LanguagePicker";
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
+const translatedPath = useTranslatedPath(lang);
 
 const links = [
   {
-    name: "About",
-    href: "/about",
+    name: t("about"),
+    href: translatedPath("/about"),
   },
   {
-    name: "Blog",
-    href: "/blog",
+    name: t("blog"),
+    href: translatedPath("/blog"),
   },
   {
-    name: "Contact",
-    href: "/contact",
+    name: t("contact"),
+    href: translatedPath("/contact"),
   },
 ];
 ---
@@ -22,7 +28,7 @@ const links = [
 <nav class="p-4 bg-blue-100 dark:bg-gray-800 text-gray-800 dark:text-white">
   <div class="container mx-auto flex justify-between items-center">
     <div class="lg:flex lg:items-center lg:w-auto w-full">
-      <Link href="/" variant="link">
+      <Link href={translatedPath("/")} variant="link">
         <House />
       </Link>
     </div>
@@ -60,31 +66,37 @@ const links = [
       </ul>
     </div>
 
-    <div class="hidden lg:flex lg:items-center lg:w-auto w-full">
-      <ModeToggle client:load />
+    <div class="hidden lg:flex lg:items-center lg:w-auto w-full lg:space-x-4">
+      <ModeToggle client:idle />
+      <span></span>
+      <LanguagePicker url={Astro.url} client:idle />
     </div>
   </div>
-
-  <div id="mobile-menu" class="lg:hidden hidden">
-    <ul class="text-gray-800 dark:text-white space-y-2">
-      {
-        links.map(({ name, href }) => (
-          <li class="text-center">
-            <Link href={href} variant="link" className="text-white">
-              {name}
-            </Link>
-          </li>
-        ))
-      }
-    </ul>
-  </div>
-
-  <script>
-    document.getElementById("mobile-menu-button")?.addEventListener("click", () => {
-      const menu = document.getElementById("mobile-menu");
-      if (menu) {
-        menu.classList.toggle("hidden");
-      }
-    });
-  </script>
 </nav>
+
+<nav id="mobile-menu" class="lg:hidden hidden">
+  <ul class="bg-blue-100 dark:bg-gray-800 text-gray-800 dark:text-white space-y-2">
+    {
+      links.map(({ name, href }) => (
+        <li class="text-center">
+          <Link href={href} variant="link">
+            {name}
+          </Link>
+        </li>
+      ))
+    }
+    <div class="flex pb-4 justify-evenly">
+      <ModeToggle client:idle />
+      <LanguagePicker url={Astro.url} client:idle />
+    </div>
+  </ul>
+</nav>
+
+<script>
+  document.getElementById("mobile-menu-button")?.addEventListener("click", () => {
+    const menu = document.getElementById("mobile-menu");
+    if (menu) {
+      menu.classList.toggle("hidden");
+    }
+  });
+</script>
