--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,14 +1,18 @@
 ---
 import { Link } from "@/components/ui/link";
+import { getLangFromUrl, useTranslations } from "@/i18n/utils";
 import BaseLayout from "@/layouts/BaseLayout.astro";
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <BaseLayout title="About">
   <div class="mx-auto max-w-screen-md mt-8 px-4">
-    <h1 class="text-4xl font-bold my-4">About</h1>
+    <h1 class="text-4xl font-bold my-4">{t("about.title")}</h1>
     <p class="my-4">
-      This is a template for a simple astro project with tailwindcss and shadcn/ui.
+      {t("about.description")}
     </p>
-    <Link href="https://github.com/wangrunlin/astro-shadcn">GitHub</Link>
+    <Link href="https://github.com/wangrunlin/astro-shadcn">{t("github")}</Link>
   </div>
 </BaseLayout>
